--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -10,3 +10,17 @@ body{
     background: #fff;
     height: 100%;
 }
+.headerSection{
+    background: url(../images/banner.jpg) no-repeat center center;
+    background-size: 100% 100%;
+    height:700px;
+}
+.nav-link{
+    color: #000;
+}
+@media (min-width: 1200px) {
+    .navbar-expand-xl .navbar-collapse {
+        display: contents !important;
+        flex-basis: auto;
+    }
+}
