--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -31,9 +31,13 @@ body{
     margin: 0;
 }
 .headerSection{
-    background: url(../images/banner.jpg) no-repeat center center;
+    background: url(../images/banner.png) no-repeat center center;
     background-size: 100% 100%;
     height:1372px;
+}
+.reducedManual{
+    font-family: robotoSerifLight;
+    font-size: 64px !important;
 }
 .bg-warning{
     background-color: #F7C108 !important
@@ -51,6 +55,7 @@ body{
 }
 .bannerInfo{
     margin-top: -18%;
+    padding-top: 3em;
 }
 .buttonSec .btn{
     width: 202px !important;
