--- a/styles/mediaQueries-m.css
+++ b/styles/mediaQueries-m.css
@@ -1,12 +1,23 @@
 /* iPhone SE (1st/2nd Gen), older iPhones */
 @media only screen and (max-width: 375px) {
   .headerSection {
+    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
+    background-size: 100% 32% !important;
     height: 857px;
+  }
+
+  .navbar-collapse {
+    position: absolute;
+    top: 66px;
   }
 
   .ff-crafting {
     font-size: 20px !important;
     text-align: right !important;
+  }
+
+  .bannerInfo .card-title {
+    font-size: calc(1.375rem + 0vw) !important;
   }
 
   .bannerInfo .card-title {
@@ -23,6 +34,11 @@
     font-size: 32px !important;
   }
 
+  .ff-caseStudy {
+    font-size: 32px !important;
+    font-weight: bolder !important;
+  }
+
   .ff-services {
     font-size: 32px !important;
     text-align: center !important;
@@ -35,6 +51,11 @@
   .gridInfo .card-body {
     font-size: 11px !important;
     text-align: center !important;
+  }
+
+  .postSection {
+    border-bottom: 16px solid #F7C108 !important;
+    margin-top: 0 !important;
   }
 
   .postSection .card-text {
@@ -55,14 +76,17 @@
   }
 
   .servicesSection {
-    background: url(../images/Ellipse.png) no-repeat -251px 147px;
-    background-size: 189% 155%;
+    background: url(../images/Ellipse.png) no-repeat -392px 180px;
+    background-size: 243% 155%;
     height: auto;
   }
 
-  .txt-service,
+  .txt-service{
+    font-size: 36px !important;
+  }
   .ff-values {
-    font-size: 23px !important;
+    font-size: 32px !important;
+    line-height: 35px !important;
   }
 
   .servInfo {
@@ -70,13 +94,15 @@
   }
 
   .servInfo .card-title {
-    font-size: 25px !important;
+    font-size: 32px !important;
     font-weight: 700 !important;
     text-align: center !important;
   }
 
   .servInfo .card-text {
+    font-size: 16px;
     text-align: center !important;
+    width: 92%;
   }
 
   .formSection .card-text {
@@ -87,13 +113,29 @@
 
   .ff-crafting {
     margin-top: 0;
+  }
+
+  .reducedManual {
+    font-size: 32px !important;
+    margin-bottom: 0 !important;
+    text-align: center !important;
+    width: 85%;
+  }
+  .customHeading{
+    margin-bottom: 0 !important;
   }
 }
 
 /* iPhone X, XS, 11 Pro, 12 Mini */
 @media only screen and (max-width: 375px) and (max-height: 812px) {
-  .headerSection {
+.headerSection {
+    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
+    background-size: 100% 32% !important;
     height: 857px;
+  }
+  .navbar-collapse {
+    position: absolute;
+    top: 66px;
   }
 
   .ff-crafting {
@@ -105,18 +147,23 @@
     font-size: calc(1.375rem + 0vw) !important;
   }
 
+  .bannerInfo .card-title {
+    font-size: calc(1.375rem + 0vw) !important;
+  }
+
   .bannerInfo .card {
     border-right: none !important;
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-
+  
   .ff-worldEvolves {
     font-size: 32px !important;
   }
 
-  .text-yellow {
-    font-size: 36px !important;
+  .ff-caseStudy {
+    font-size: 32px !important;
+    font-weight: bolder !important;
   }
 
   .ff-services {
@@ -124,9 +171,18 @@
     text-align: center !important;
   }
 
+  .text-yellow {
+    font-size: 36px !important;
+  }
+
   .gridInfo .card-body {
     font-size: 11px !important;
     text-align: center !important;
+  }
+
+  .postSection {
+    border-bottom: 16px solid #F7C108 !important;
+    margin-top: 0 !important;
   }
 
   .postSection .card-text {
@@ -147,14 +203,17 @@
   }
 
   .servicesSection {
-    background: url(../images/Ellipse.png) no-repeat -251px 147px;
-    background-size: 189% 155%;
+    background: url(../images/Ellipse.png) no-repeat -392px 180px;
+    background-size: 243% 155%;
     height: auto;
   }
 
-  .txt-service,
+  .txt-service{
+    font-size: 36px !important;
+  }
   .ff-values {
-    font-size: 23px !important;
+    font-size: 32px !important;
+    line-height: 35px !important;
   }
 
   .servInfo {
@@ -162,13 +221,15 @@
   }
 
   .servInfo .card-title {
-    font-size: 25px !important;
+    font-size: 32px !important;
     font-weight: 700 !important;
     text-align: center !important;
   }
 
   .servInfo .card-text {
+    font-size: 16px;
     text-align: center !important;
+    width: 92%;
   }
 
   .formSection .card-text {
@@ -179,13 +240,30 @@
 
   .ff-crafting {
     margin-top: 0;
+  }
+
+  .reducedManual {
+    font-size: 32px !important;
+    margin-bottom: 0 !important;
+    text-align: center !important;
+    width: 85%;
+  }
+  .customHeading{
+    margin-bottom: 0 !important;
   }
 }
 
 /* iPhone 12/13/14, 14 Pro */
 @media only screen and (max-width: 390px) {
-  .headerSection {
+.headerSection {
+    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
+    background-size: 100% 32% !important;
     height: 857px;
+  }
+
+  .navbar-collapse {
+    position: absolute;
+    top: 66px;
   }
 
   .ff-crafting {
@@ -197,18 +275,23 @@
     font-size: calc(1.375rem + 0vw) !important;
   }
 
+  .bannerInfo .card-title {
+    font-size: calc(1.375rem + 0vw) !important;
+  }
+
   .bannerInfo .card {
     border-right: none !important;
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-
+  
   .ff-worldEvolves {
     font-size: 32px !important;
   }
 
-  .text-yellow {
-    font-size: 36px !important;
+  .ff-caseStudy {
+    font-size: 32px !important;
+    font-weight: bolder !important;
   }
 
   .ff-services {
@@ -216,9 +299,18 @@
     text-align: center !important;
   }
 
+  .text-yellow {
+    font-size: 36px !important;
+  }
+
   .gridInfo .card-body {
     font-size: 11px !important;
     text-align: center !important;
+  }
+
+  .postSection {
+    border-bottom: 16px solid #F7C108 !important;
+    margin-top: 0 !important;
   }
 
   .postSection .card-text {
@@ -239,14 +331,17 @@
   }
 
   .servicesSection {
-    background: url(../images/Ellipse.png) no-repeat -251px 147px;
-    background-size: 189% 155%;
+    background: url(../images/Ellipse.png) no-repeat -392px 180px;
+    background-size: 243% 155%;
     height: auto;
   }
 
-  .txt-service,
+  .txt-service{
+    font-size: 36px !important;
+  }
   .ff-values {
-    font-size: 23px !important;
+    font-size: 32px !important;
+    line-height: 35px !important;
   }
 
   .servInfo {
@@ -254,13 +349,15 @@
   }
 
   .servInfo .card-title {
-    font-size: 25px !important;
+    font-size: 32px !important;
     font-weight: 700 !important;
     text-align: center !important;
   }
 
   .servInfo .card-text {
+    font-size: 16px;
     text-align: center !important;
+    width: 92%;
   }
 
   .formSection .card-text {
@@ -271,13 +368,30 @@
 
   .ff-crafting {
     margin-top: 0;
+  }
+
+  .reducedManual {
+    font-size: 32px !important;
+    margin-bottom: 0 !important;
+    text-align: center !important;
+    width: 85%;
+  }
+  .customHeading{
+    margin-bottom: 0 !important;
   }
 }
 
 /* iPhone 14 Pro Max */
 @media only screen and (max-width: 430px) {
-  .headerSection {
+.headerSection {
+    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
+    background-size: 100% 32% !important;
     height: 857px;
+  }
+
+  .navbar-collapse {
+    position: absolute;
+    top: 66px;
   }
 
   .ff-crafting {
@@ -289,18 +403,23 @@
     font-size: calc(1.375rem + 0vw) !important;
   }
 
+  .bannerInfo .card-title {
+    font-size: calc(1.375rem + 0vw) !important;
+  }
+
   .bannerInfo .card {
     border-right: none !important;
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-
+  
   .ff-worldEvolves {
     font-size: 32px !important;
   }
 
-  .text-yellow {
-    font-size: 36px !important;
+  .ff-caseStudy {
+    font-size: 32px !important;
+    font-weight: bolder !important;
   }
 
   .ff-services {
@@ -308,14 +427,18 @@
     text-align: center !important;
   }
 
+  .text-yellow {
+    font-size: 36px !important;
+  }
+
   .gridInfo .card-body {
     font-size: 11px !important;
     text-align: center !important;
   }
 
-  .postSection .card-title {
-    font-size: 32px !important;
-    text-align: center !important;
+  .postSection {
+    border-bottom: 16px solid #F7C108 !important;
+    margin-top: 0 !important;
   }
 
   .postSection .card-text {
@@ -336,14 +459,17 @@
   }
 
   .servicesSection {
-    background: url(../images/Ellipse.png) no-repeat -251px 147px;
-    background-size: 189% 155%;
+    background: url(../images/Ellipse.png) no-repeat -392px 180px;
+    background-size: 243% 155%;
     height: auto;
   }
 
-  .txt-service,
+  .txt-service{
+    font-size: 36px !important;
+  }
   .ff-values {
-    font-size: 23px !important;
+    font-size: 32px !important;
+    line-height: 35px !important;
   }
 
   .servInfo {
@@ -351,13 +477,15 @@
   }
 
   .servInfo .card-title {
-    font-size: 25px !important;
+    font-size: 32px !important;
     font-weight: 700 !important;
     text-align: center !important;
   }
 
   .servInfo .card-text {
+    font-size: 16px;
     text-align: center !important;
+    width: 92%;
   }
 
   .formSection .card-text {
@@ -368,6 +496,16 @@
 
   .ff-crafting {
     margin-top: 0;
+  }
+
+  .reducedManual {
+    font-size: 32px !important;
+    margin-bottom: 0 !important;
+    text-align: center !important;
+    width: 85%;
+  }
+  .customHeading{
+    margin-bottom: 0 !important;
   }
 }
 
@@ -382,16 +520,12 @@
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-
-  /* .bannerInfo .card-title{
-        font-size: 22px;
-    } */
 }
 
 @media (max-width:1024px) {
-  .bannerInfo {
+  /* .bannerInfo {
     /* margin-top: -133%; */
-  }
+  /* } */
 
   .bannerInfo .card {
     border-right: 1px dashed #000;
