--- a/styles/mediaQueries-m.css
+++ b/styles/mediaQueries-m.css
@@ -81,9 +81,10 @@
     height: auto;
   }
 
-  .txt-service{
+  .txt-service {
     font-size: 36px !important;
   }
+
   .ff-values {
     font-size: 32px !important;
     line-height: 35px !important;
@@ -121,18 +122,24 @@
     text-align: center !important;
     width: 85%;
   }
-  .customHeading{
+
+  .customHeading {
     margin-bottom: 0 !important;
+  }
+
+  .nav-pills {
+    margin-left: 40%;
   }
 }
 
 /* iPhone X, XS, 11 Pro, 12 Mini */
 @media only screen and (max-width: 375px) and (max-height: 812px) {
-.headerSection {
+  .headerSection {
     background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
     background-size: 100% 32% !important;
     height: 857px;
   }
+
   .navbar-collapse {
     position: absolute;
     top: 66px;
@@ -156,7 +163,7 @@
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-  
+
   .ff-worldEvolves {
     font-size: 32px !important;
   }
@@ -208,9 +215,10 @@
     height: auto;
   }
 
-  .txt-service{
+  .txt-service {
     font-size: 36px !important;
   }
+
   .ff-values {
     font-size: 32px !important;
     line-height: 35px !important;
@@ -248,14 +256,19 @@
     text-align: center !important;
     width: 85%;
   }
-  .customHeading{
+
+  .customHeading {
     margin-bottom: 0 !important;
+  }
+
+  .nav-pills {
+    margin-left: 40%;
   }
 }
 
 /* iPhone 12/13/14, 14 Pro */
 @media only screen and (max-width: 390px) {
-.headerSection {
+  .headerSection {
     background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
     background-size: 100% 32% !important;
     height: 857px;
@@ -284,7 +297,7 @@
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-  
+
   .ff-worldEvolves {
     font-size: 32px !important;
   }
@@ -336,9 +349,10 @@
     height: auto;
   }
 
-  .txt-service{
+  .txt-service {
     font-size: 36px !important;
   }
+
   .ff-values {
     font-size: 32px !important;
     line-height: 35px !important;
@@ -376,14 +390,19 @@
     text-align: center !important;
     width: 85%;
   }
-  .customHeading{
+
+  .customHeading {
     margin-bottom: 0 !important;
+  }
+
+  .nav-pills {
+    margin-left: 40%;
   }
 }
 
 /* iPhone 14 Pro Max */
 @media only screen and (max-width: 430px) {
-.headerSection {
+  .headerSection {
     background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
     background-size: 100% 32% !important;
     height: 857px;
@@ -412,7 +431,7 @@
     border-bottom: 1px dashed #000 !important;
     font-size: 20px;
   }
-  
+
   .ff-worldEvolves {
     font-size: 32px !important;
   }
@@ -464,9 +483,10 @@
     height: auto;
   }
 
-  .txt-service{
+  .txt-service {
     font-size: 36px !important;
   }
+
   .ff-values {
     font-size: 32px !important;
     line-height: 35px !important;
@@ -504,8 +524,12 @@
     text-align: center !important;
     width: 85%;
   }
-  .customHeading{
+
+  .customHeading {
     margin-bottom: 0 !important;
+  }
+  .nav-pills {
+    margin-left: 40%;
   }
 }
 
