--- a/styles/mediaQueries-m.css
+++ b/styles/mediaQueries-m.css
@@ -1,14 +1,44 @@
 /* iPhone SE (1st/2nd Gen), older iPhones */
 @media only screen and (max-width: 375px) {
-  .headerSection {
-    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
-    background-size: 100% 32% !important;
+.headerSection {
+    background: url(../images/banner.png) no-repeat 29% 0 !important;
+    background-size: 119% 85% !important;
     height: 857px;
+  }
+
+  .topSection {
+    padding-top: 30px;
+  }
+
+  .navbar-toggler {
+    border: none;
   }
 
   .navbar-collapse {
     position: absolute;
     top: 66px;
+    width: 100%;
+  }
+  .customNavBar{
+    height: 69vh;
+    left: 0;
+    z-index: 10;
+    ul{
+      margin: 0;
+    }
+    .nav-item{
+      border-bottom: 1px solid #fff;
+      line-height: 90px;
+      margin-right: 1rem !important;
+      margin-left: 1rem !important;
+
+      .nav-link{
+        font-size: 30px !important;
+      }
+    }
+    .nav-item:last-child{
+      border-bottom: 0;
+    }
   }
 
   .ff-crafting {
@@ -20,8 +50,16 @@
     font-size: calc(1.375rem + 0vw) !important;
   }
 
-  .bannerInfo .card-title {
-    font-size: calc(1.375rem + 0vw) !important;
+  .bannerInfo {
+    .card-title {
+      font-size: 22px !important;
+      font-weight: 900 !important;
+    }
+
+    .card-text {
+      font-size: 16px;
+      letter-spacing: normal;
+    }
   }
 
   .bannerInfo .card {
@@ -32,6 +70,13 @@
 
   .ff-worldEvolves {
     font-size: 32px !important;
+    word-spacing: 0;
+  }
+
+  .evolvesInfo {
+    .text-warning {
+      line-height: normal;
+    }
   }
 
   .ff-caseStudy {
@@ -42,6 +87,15 @@
   .ff-services {
     font-size: 32px !important;
     text-align: center !important;
+    margin-bottom: 51px;
+  }
+
+  .gridInfo {
+
+    h5,
+    p {
+      font-size: 16px !important;
+    }
   }
 
   .text-yellow {
@@ -51,6 +105,30 @@
   .gridInfo .card-body {
     font-size: 11px !important;
     text-align: center !important;
+    margin: 0 auto;
+    width: 92%;
+  }
+
+  .gridBanner .card-body.bg-warning {
+    font-size: 32px;
+    height: 40%;
+  }
+
+  .gridBanner {
+    height: auto;
+  }
+
+  .casestudyImage {
+    background: none;
+    height: auto;
+  }
+
+  .carousel-container {
+    width: 100%;
+  }
+
+  .imgBannerInfo {
+    display: block;
   }
 
   .postSection {
@@ -67,12 +145,18 @@
 
   .buttonSec {
     text-align: center !important;
+    float: none !important;
+    width: 100% !important;
+    margin-left: 130px !important;
   }
 
   .buttonSec .btn {
     font-size: 16px !important;
     margin: 0 auto !important;
     width: 137px !important;
+    font-weight: bold;
+    padding: 10px 0 !important;
+    border-color: #000;
   }
 
   .servicesSection {
@@ -91,36 +175,86 @@
   }
 
   .servInfo {
+    float: none !important;
+    margin: 0;
     width: 100% !important;
   }
 
   .servInfo .card-title {
-    font-size: 32px !important;
+    font-size: 7.4vw !important;
     font-weight: 700 !important;
     text-align: center !important;
   }
 
-  .servInfo .card-text {
+  /* .servInfo .card-text {
     font-size: 16px;
     text-align: center !important;
     width: 92%;
+  } */
+  .servInfo .card-text.fw-velocity {
+    font-size: 41px !important;
+    font-weight: normal !important;
   }
+
+  .servInfo .card-text.contact {
+    font-size: 41px !important;
+  }
+
 
   .formSection .card-text {
     display: block !important;
     text-align: center !important;
-    font-size: 33px !important;
+    font-size: 39px !important;
+  }
+
+  .desktop-view {
+    display: none;
+  }
+
+  .mobile-view {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+
+    .form-control-lg{
+      color: #000;
+      font-size: 12px;
+      padding: 1rem 1rem;
+    }
+    .btn-send{
+      margin: 0 auto;
+      width: 158px;
+    }
   }
 
   .ff-crafting {
+    font-size: 27px !important;
     margin-top: 0;
+    letter-spacing: normal;
+    line-height: 25px;
+    padding-right: 75px;
+    padding-top: 44px;
+    text-align: left !important;
+    width: 100% !important;
   }
 
   .reducedManual {
-    font-size: 32px !important;
-    margin-bottom: 0 !important;
+    font-size: 37px !important;
+    margin-bottom: 30px !important;
+    margin: 0 auto;
     text-align: center !important;
     width: 85%;
+  }
+
+  .postSection {
+    .card-body {
+      float: none;
+
+      .card-text {
+        font-size: 16px !important;
+        margin-bottom: 55px;
+      }
+    }
   }
 
   .customHeading {
@@ -129,20 +263,54 @@
 
   .nav-pills {
     margin-left: 40%;
+  }
+
+  .gridBanner {
+    width: 100%;
   }
 }
 
 /* iPhone X, XS, 11 Pro, 12 Mini */
 @media only screen and (max-width: 375px) and (max-height: 812px) {
-  .headerSection {
-    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
-    background-size: 100% 32% !important;
+.headerSection {
+    background: url(../images/banner.png) no-repeat 29% 0 !important;
+    background-size: 119% 85% !important;
     height: 857px;
+  }
+
+  .topSection {
+    padding-top: 30px;
+  }
+
+  .navbar-toggler {
+    border: none;
   }
 
   .navbar-collapse {
     position: absolute;
     top: 66px;
+    width: 100%;
+  }
+  .customNavBar{
+    height: 69vh;
+    left: 0;
+    z-index: 10;
+    ul{
+      margin: 0;
+    }
+    .nav-item{
+      border-bottom: 1px solid #fff;
+      line-height: 90px;
+      margin-right: 1rem !important;
+      margin-left: 1rem !important;
+
+      .nav-link{
+        font-size: 30px !important;
+      }
+    }
+    .nav-item:last-child{
+      border-bottom: 0;
+    }
   }
 
   .ff-crafting {
@@ -154,8 +322,16 @@
     font-size: calc(1.375rem + 0vw) !important;
   }
 
-  .bannerInfo .card-title {
-    font-size: calc(1.375rem + 0vw) !important;
+  .bannerInfo {
+    .card-title {
+      font-size: 22px !important;
+      font-weight: 900 !important;
+    }
+
+    .card-text {
+      font-size: 16px;
+      letter-spacing: normal;
+    }
   }
 
   .bannerInfo .card {
@@ -166,6 +342,13 @@
 
   .ff-worldEvolves {
     font-size: 32px !important;
+    word-spacing: 0;
+  }
+
+  .evolvesInfo {
+    .text-warning {
+      line-height: normal;
+    }
   }
 
   .ff-caseStudy {
@@ -176,6 +359,15 @@
   .ff-services {
     font-size: 32px !important;
     text-align: center !important;
+    margin-bottom: 51px;
+  }
+
+  .gridInfo {
+
+    h5,
+    p {
+      font-size: 16px !important;
+    }
   }
 
   .text-yellow {
@@ -185,6 +377,30 @@
   .gridInfo .card-body {
     font-size: 11px !important;
     text-align: center !important;
+    margin: 0 auto;
+    width: 92%;
+  }
+
+  .gridBanner .card-body.bg-warning {
+    font-size: 32px;
+    height: 40%;
+  }
+
+  .gridBanner {
+    height: auto;
+  }
+
+  .casestudyImage {
+    background: none;
+    height: auto;
+  }
+
+  .carousel-container {
+    width: 100%;
+  }
+
+  .imgBannerInfo {
+    display: block;
   }
 
   .postSection {
@@ -201,12 +417,18 @@
 
   .buttonSec {
     text-align: center !important;
+    float: none !important;
+    width: 100% !important;
+    margin-left: 130px !important;
   }
 
   .buttonSec .btn {
     font-size: 16px !important;
     margin: 0 auto !important;
     width: 137px !important;
+    font-weight: bold;
+    padding: 10px 0 !important;
+    border-color: #000;
   }
 
   .servicesSection {
@@ -225,170 +447,86 @@
   }
 
   .servInfo {
+    float: none !important;
+    margin: 0;
     width: 100% !important;
   }
 
   .servInfo .card-title {
-    font-size: 32px !important;
+    font-size: 7.4vw !important;
     font-weight: 700 !important;
     text-align: center !important;
   }
 
-  .servInfo .card-text {
+  /* .servInfo .card-text {
     font-size: 16px;
     text-align: center !important;
     width: 92%;
+  } */
+  .servInfo .card-text.fw-velocity {
+    font-size: 41px !important;
+    font-weight: normal !important;
   }
+
+  .servInfo .card-text.contact {
+    font-size: 41px !important;
+  }
+
 
   .formSection .card-text {
     display: block !important;
     text-align: center !important;
-    font-size: 33px !important;
+    font-size: 39px !important;
+  }
+
+  .desktop-view {
+    display: none;
+  }
+
+  .mobile-view {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+
+    .form-control-lg{
+      color: #000;
+      font-size: 12px;
+      padding: 1rem 1rem;
+    }
+    .btn-send{
+      margin: 0 auto;
+      width: 158px;
+    }
   }
 
   .ff-crafting {
+    font-size: 27px !important;
     margin-top: 0;
+    letter-spacing: normal;
+    line-height: 25px;
+    padding-right: 75px;
+    padding-top: 44px;
+    text-align: left !important;
+    width: 100% !important;
   }
 
   .reducedManual {
-    font-size: 32px !important;
-    margin-bottom: 0 !important;
+    font-size: 37px !important;
+    margin-bottom: 30px !important;
+    margin: 0 auto;
     text-align: center !important;
     width: 85%;
-  }
-
-  .customHeading {
-    margin-bottom: 0 !important;
-  }
-
-  .nav-pills {
-    margin-left: 40%;
-  }
-}
-
-/* iPhone 12/13/14, 14 Pro */
-@media only screen and (max-width: 390px) {
-  .headerSection {
-    background: #ECEFFE url(../images/banner.png) no-repeat 50% 10% !important;
-    background-size: 100% 32% !important;
-    height: 857px;
-  }
-
-  .navbar-collapse {
-    position: absolute;
-    top: 66px;
-  }
-
-  .ff-crafting {
-    font-size: 20px !important;
-    text-align: right !important;
-  }
-
-  .bannerInfo .card-title {
-    font-size: calc(1.375rem + 0vw) !important;
-  }
-
-  .bannerInfo .card-title {
-    font-size: calc(1.375rem + 0vw) !important;
-  }
-
-  .bannerInfo .card {
-    border-right: none !important;
-    border-bottom: 1px dashed #000 !important;
-    font-size: 20px;
-  }
-
-  .ff-worldEvolves {
-    font-size: 32px !important;
-  }
-
-  .ff-caseStudy {
-    font-size: 32px !important;
-    font-weight: bolder !important;
-  }
-
-  .ff-services {
-    font-size: 32px !important;
-    text-align: center !important;
-  }
-
-  .text-yellow {
-    font-size: 36px !important;
-  }
-
-  .gridInfo .card-body {
-    font-size: 11px !important;
-    text-align: center !important;
   }
 
   .postSection {
-    border-bottom: 16px solid #F7C108 !important;
-    margin-top: 0 !important;
-  }
+    .card-body {
+      float: none;
 
-  .postSection .card-text {
-    font-size: 16px !important;
-    text-align: center !important;
-    margin-left: 0% !important;
-    width: 100%;
-  }
-
-  .buttonSec {
-    text-align: center !important;
-  }
-
-  .buttonSec .btn {
-    font-size: 16px !important;
-    margin: 0 auto !important;
-    width: 137px !important;
-  }
-
-  .servicesSection {
-    background: url(../images/Ellipse.png) no-repeat -392px 180px;
-    background-size: 243% 155%;
-    height: auto;
-  }
-
-  .txt-service {
-    font-size: 36px !important;
-  }
-
-  .ff-values {
-    font-size: 32px !important;
-    line-height: 35px !important;
-  }
-
-  .servInfo {
-    width: 100% !important;
-  }
-
-  .servInfo .card-title {
-    font-size: 32px !important;
-    font-weight: 700 !important;
-    text-align: center !important;
-  }
-
-  .servInfo .card-text {
-    font-size: 16px;
-    text-align: center !important;
-    width: 92%;
-  }
-
-  .formSection .card-text {
-    display: block !important;
-    text-align: center !important;
-    font-size: 33px !important;
-  }
-
-  .ff-crafting {
-    margin-top: 0;
-  }
-
-  .reducedManual {
-    font-size: 32px !important;
-    margin-bottom: 0 !important;
-    text-align: center !important;
-    width: 85%;
+      .card-text {
+        font-size: 16px !important;
+        margin-bottom: 55px;
+      }
+    }
   }
 
   .customHeading {
@@ -397,6 +535,10 @@
 
   .nav-pills {
     margin-left: 40%;
+  }
+
+  .gridBanner {
+    width: 100%;
   }
 }
 
